fix footer links order on mobile

--- a/portal/static/portal/sass/partials/_footer.scss
+++ b/portal/static/portal/sass/partials/_footer.scss
@@ -62,7 +62,7 @@
     display: flex;
   }
 
-  input[type='email'] {
+  input[type="email"] {
     @include _font-size(20px);
     border: none;
     border-radius: 0;
@@ -97,17 +97,10 @@
     }
   }
 
-  table {
-    border: none;
-    margin: 0;
-    text-align: left;
+  .footer-links {
+    @include _margin(0px, -15px, 0px, -15px);
 
-    tr,
-    td {
-      border: none;
-      margin: 0;
-      padding: 0;
-    }
+    text-align: left;
   }
 
   .button {
@@ -150,7 +143,7 @@
     }
 
     .form--news-signup__input,
-    .input--icon, {
+    .input--icon {
       width: 100%;
     }
 
